--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -1,7 +1,4 @@
-// $post-link-highlight: #474C50;
 $post-link-highlight: #388fd6;
-$post-link-underline: linear-gradient(to bottom, rgba($post-link-highlight, 0.3) 50%, rgba($post-link-highlight, 0) 50%);
-$post-link-underline-on: linear-gradient(to bottom, rgba($post-link-highlight, 0.6) 50%, rgba($post-link-highlight, 0) 50%);
 
 * {
   box-sizing: border-box;
@@ -47,7 +44,7 @@ body {
   margin: 0 auto;
   padding: 6rem 1.5rem;
 
-  font-family: "Iowan Old Style";
+  font-family: "Iowan Old Style", "Palatino Linotype", "Palatino", serif;
   font-size: 1rem;
 }
 
@@ -66,22 +63,16 @@ body {
   }
 
   a {
+    display: inline-block;
+    line-height: 0.9;
     text-decoration: none;
     color: inherit;
-    border-bottom: solid 1px currentColor;
+    border-bottom: solid 1px rgba($post-link-highlight, 0.3);
     letter-spacing: 0.06em;
 
-    @supports(background-image: $post-link-underline) {
-      background-image: $post-link-underline;
-      background-repeat: repeat-x;
-      background-size: 2px 0.1em;
-      background-position: 0 1.15em;
-      border-bottom: 0;
-
-      &:hover {
-        background-image: $post-link-underline-on;
-        background-size: 2px 0.2em;
-      }
+    &:hover {
+      border-bottom-width: 2px;
+      border-color: rgba($post-link-highlight, 0.6);
     }
 
     &.is-highlighted {
@@ -95,8 +86,8 @@ body {
 }
 
 .post__meta {
-  font-size: 75%;
-  opacity: 0.75;
+  font-size: 60%;
+  opacity: 0.5;
 
   &:last-child {
     margin-top: 6em;
