--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -1,4 +1,7 @@
 $post-link-highlight: #388fd6;
+$post-link-underline: linear-gradient(to bottom, rgba($post-link-highlight, 0.3) 50%, rgba($post-link-highlight, 0) 50%);
+$post-link-underline-on: linear-gradient(to bottom, rgba($post-link-highlight, 0.6) 50%, rgba($post-link-highlight, 0) 50%);
+
 
 * {
   box-sizing: border-box;
@@ -67,16 +70,22 @@ body {
   }
 
   a {
-    display: inline-block;
-    line-height: 0.9;
     text-decoration: none;
     color: inherit;
-    border-bottom: solid 1px rgba($post-link-highlight, 0.3);
+    border-bottom: solid 1px currentColor;
     letter-spacing: 0.06em;
 
-    &:hover {
-      border-bottom-width: 2px;
-      border-color: rgba($post-link-highlight, 0.6);
+    @supports(background-image: $post-link-underline) {
+      background-image: $post-link-underline;
+      background-repeat: repeat-x;
+      background-size: 2px 0.1em;
+      background-position: 0 1.15em;
+      border-bottom: 0;
+
+      &:hover {
+        background-image: $post-link-underline-on;
+        background-size: 2px 0.2em;
+      }
     }
 
     &.is-highlighted {
