Make website an app!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+
   {% if page.og_title %}<meta content="{{ page.og_title }}" property="og:title">{% endif %}
   {% if page.og_description %}<meta content="{{ page.og_description }}" property="og:description">{% endif %}
   {% if page.og_image %}<meta content="{{ page.og_image }}" property="og:image">{% endif %}
