Change iOS status bar style

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   {% if page.og_title %}<meta content="{{ page.og_title }}" property="og:title">{% endif %}
   {% if page.og_description %}<meta content="{{ page.og_description }}" property="og:description">{% endif %}
